--- a/pupa website/dapupa/main/index.html
+++ b/pupa website/dapupa/main/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Zeekos Perakos">
   <title>The Pupa Page</title>
-  <!title is displayed in the web page tab>
+  <!--title is displayed in the web page tab-->
   <style>
     body {
       padding: 0;
@@ -15,7 +15,6 @@
   </style>
   <script src="../p5.js"></script>
   <script src="../addons/p5.sound.min.js"></script>
-  <script src="sketch.js"></script>
   <link href="style.css" rel="stylesheet"></link>
   <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@500" rel="stylesheet"></link>
 </head>
@@ -24,7 +23,7 @@
   <main>
     <h1>Pupa</h1>
       <p>Hello, Pupa is <em>Jun Han</em> and <em>Zeek</em>.<br>
-        <! helloo this is a comment / em means emphasis. real effect = italicise>
+        <!-- helloo this is a comment / em means emphasis. real effect = italicise-->
         <br>Pupa likes cats.
         <br>
         <br>Pupa is an electronic music duo in Singapore.
@@ -36,10 +35,12 @@
             known as Pupa.
         <br>
         <br>
-        Visit their <a href="http://pupasg.bandcamp.com">Bandcamp</a> to listen to some tunes.
+        Visit their <a href="http://pupasg.bandcamp.com" title="Pupa's Bandcamp" target="blank">Bandcamp</a> to listen to some tunes.
       </p>
       <img src="junzeek.jpg" alt="Jun and Zeek 2013">
   </main>
+    <script src="sketch.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 
 </html>
